feat(article): how to join open source

--- a/docs/.vitepress/sidebarConfig.json
+++ b/docs/.vitepress/sidebarConfig.json
@@ -10,7 +10,12 @@
   },
   {
     "text": "Technology",
-    "items": []
+    "items": [
+      {
+        "text": "如何参与前端开源项目",
+        "link": "/technology/how-to-join-open-source/index"
+      }
+    ]
   },
   {
     "text": "React",
