--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "vitepress build docs",
     "serve": "vitepress serve docs",
     "format": "prettier --ignore-unknown --ignore-path .gitignore --write .",
-    "create": "node ./scripts/create"
+    "new": "node ./scripts/new"
   },
   "dependencies": {
     "vitepress": "^1.0.0-alpha.9",
