chore: update config

--- a/docs/.vitepress/sidebarConfig.json
+++ b/docs/.vitepress/sidebarConfig.json
@@ -10,7 +10,12 @@
   },
   {
     "text": "Technology",
-    "items": []
+    "items": [
+      {
+        "text": "Redux 从使用到源码解读",
+        "link": "/technology/redux-analysis/index"
+      }
+    ]
   },
   {
     "text": "React",
