--- a/docs/.vitepress/sidebarConfig.json
+++ b/docs/.vitepress/sidebarConfig.json
@@ -14,6 +14,10 @@
       {
         "text": "Redux 从使用到源码解读",
         "link": "/technology/redux-analysis/index"
+      },
+      {
+        "text": "如何参与前端开源项目",
+        "link": "/technology/how-to-join-open-source/index"
       }
     ]
   },
